--- a/DestoPesto/DestoPesto/Views/ContestIntroPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ContestIntroPage.xaml
@@ -18,8 +18,6 @@
                                   ScaleOut="0.8" />
     </pages:PopupPage.Animation>
 
-
-
     <Frame Margin="10" 
           CornerRadius="5"
           HorizontalOptions="Fill" 
@@ -28,9 +26,14 @@
           MinimumHeightRequest="500"
           IsClippedToBounds="True"
           BackgroundColor="White"
-          Padding="10,20,10,20">
-        <StackLayout>
-            <Grid>
+          Padding="10,20,10,10">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0"  >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
@@ -39,42 +42,27 @@
                     <Image  HorizontalOptions="Center" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.icon.png}" VerticalOptions="Center" Aspect="AspectFit" />
                 </Frame>
                 <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.ContestTitle}" FontSize="Title" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" BackgroundColor="White"   TextColor="#0D6EFD"/>
-
-
             </Grid>
             <!--BackgroundColor="{extensions:AppMode Color=Mitsos}"-->
-            <StackLayout Orientation="Horizontal">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="3*"/>
-                        <RowDefinition Height="2*"/>
-                    </Grid.RowDefinitions>
 
+            <Grid Grid.Row="1"  HorizontalOptions="FillAndExpand"  HeightRequest="150" >
+                <WebView x:Name="browser" HeightRequest="150"   HorizontalOptions="FillAndExpand" >
+                    <!--<WebView.Source>
+                        <HtmlWebViewSource Html="{Binding MobileHomePage}"/>
+                    </WebView.Source>-->
+                </WebView>
+            </Grid>
 
-                    <Label  Text="{x:Static resources:Properties.Resources.InstructionsMessage}" HorizontalTextAlignment="Start"  HorizontalOptions="FillAndExpand" LineBreakMode="WordWrap" VerticalOptions="Center"   TextColor="#0D6EFD"/>
-                    <Grid Grid.Row="1" Padding="5,5,5,5" BackgroundColor="White"   >
-                        <Grid.ColumnDefinitions>
+            <Grid Grid.Row="2"  BackgroundColor="White"   >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Button HeightRequest="40" Grid.Column="1" x:Name="OKBtn" Margin="10,0,10,0" Opacity="0.5" Text="OK" Clicked="OKBtn_Clicked"   ></Button>
+                <Button HeightRequest="40" Grid.Column="2" x:Name="CancelBtn" Margin="10,0,10,0" Opacity="0.5" Text="Cancel" Clicked="CancelBtn_Clicked" ></Button>
+            </Grid>
 
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                            
-
-                        </Grid.ColumnDefinitions>
-                        <!--<Switch IsToggled="{Binding DontShowAgain}"  VerticalOptions="Center" Scale="1.5"  HorizontalOptions="StartAndExpand"   OnColor="{AppThemeBinding Light=Blue, Dark=Red}" ThumbColor="{AppThemeBinding Light=Blue, Dark=Red}"/>-->
-                        <!--<CheckBox IsChecked="{Binding DontShowAgain}"  VerticalOptions="Center" Scale="1.5"  HorizontalOptions="StartAndExpand"   Color="{AppThemeBinding Light=Black, Dark=Black}" />-->
-                        <!--<Switch IsToggled="{Binding DontShowAgain}"  VerticalOptions="Center" Scale="1.5"  HorizontalOptions="StartAndExpand" OnColor= "#0D6EFD" ThumbColor="#d9d9d9" />
-
-                        <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.DontShowAgain}" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" Padding="5" TextColor="#0D6EFD"/>-->
-
-                        <Button Grid.Column="1" x:Name="OKBtn" Margin="10,0,10,0" Opacity="0.5" Text="OK" Clicked="OKBtn_Clicked"   ></Button>
-                        <Button Grid.Column="2" x:Name="CancelBtn" Margin="10,0,10,0" Opacity="0.5" Text="Cancel" Clicked="CancelBtn_Clicked" ></Button>
-
-
-                    </Grid>
-                    <!--<CheckBox  IsChecked="{Binding DontShowAgain}"></CheckBox>-->
-                </Grid>
-            </StackLayout>
-        </StackLayout>
+        </Grid>
     </Frame>
 </pages:PopupPage>
