--- a/DestoPesto/DestoPesto/Views/SubmisionPopupPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SubmisionPopupPage.xaml
@@ -55,11 +55,11 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Grid >-->
-            <Label Grid.Row="3" TextColor="DarkGray" Grid.Column="1" Text="{Binding Comments}" HorizontalTextAlignment="Center" VerticalOptions="Center" HorizontalOptions="Center" LineBreakMode="WordWrap"></Label>
+            <Label Grid.Row="3" TextColor="#0D6EFD" Grid.Column="1" Text="{Binding Comments}" HorizontalTextAlignment="Center" VerticalOptions="Center" HorizontalOptions="Center" LineBreakMode="WordWrap"></Label>
 
                 <!--</Grid>
             </Grid>-->
         </Grid>
 
-    </Frame>
+    </Frame> 
 </pages:PopupPage>
