--- a/DestoPesto/DestoPesto/Views/UserProfilePage.xaml
+++ b/DestoPesto/DestoPesto/Views/UserProfilePage.xaml
@@ -21,7 +21,11 @@
     </Shell.TitleView>
 
     <ContentPage.Content>
+
         <StackLayout Grid.Row="1" VerticalOptions="Center">
+
+            <Label Text="{x:Static resources:Properties.Resources.UserProfileText}" TextColor="{extensions:AppMode Color=Text}" HorizontalOptions="CenterAndExpand" FontSize="Title"/>
+            <Label  Text="{x:Static resources:Properties.Resources.UserProfileText_2}" TextColor="{extensions:AppMode Color=Text}"  HorizontalOptions="CenterAndExpand" FontSize="Header" />
 
             <!--<Image Source="{AppThemeBinding Light={extensions:ImageResource DestoPesto.Images.login_header.png}, Dark={extensions:ImageResource DestoPesto.Images.login_header.png}}"  />-->
 
