--- a/DestoPesto/DestoPesto/Views/ContestIntroPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ContestIntroPage.xaml
@@ -28,6 +28,7 @@
           IsClippedToBounds="True"
           BackgroundColor="White"
           Padding="10,20,10,10">
+
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -50,13 +51,14 @@
             <Grid Grid.Row="1"  HorizontalOptions="FillAndExpand"  HeightRequest="250" >
 
                 <Image   x:Name="backgroundImage" Source="{Binding InfoUrl}" AbsoluteLayout.LayoutFlags="PositionProportional"  HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Aspect="AspectFill">
-                 
-                </Image>
-                
-               
-            </Grid>
 
-            <hpl:HyperlinkLabel  Grid.Row="2"   x:Name="howto" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.HowItWorks}" Clicked="howto_Clicked" />
+                </Image>
+
+
+            </Grid>
+            <Grid Grid.Row="2">
+                <hpl:HyperlinkLabel     x:Name="ContestTerms" Text="{x:Static resources:Properties.Resources.ContestTermsLabel}" Clicked="ContestTerms_Clicked" />
+            </Grid>
             <Grid Grid.Row="3"  BackgroundColor="White"   >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -68,5 +70,8 @@
             </Grid>
 
         </Grid>
+        
+
+
     </Frame>
 </pages:PopupPage>
