--- a/DestoPesto/DestoPesto/Views/ContestIntroPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ContestIntroPage.xaml
@@ -49,28 +49,24 @@
             <!--BackgroundColor="{extensions:AppMode Color=Mitsos}"-->
 
             <Grid Grid.Row="1"  HorizontalOptions="FillAndExpand"  HeightRequest="250" >
-
-                <Image   x:Name="backgroundImage" Source="{Binding InfoUrl}" AbsoluteLayout.LayoutFlags="PositionProportional"  HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Aspect="AspectFill">
-
-                </Image>
-
-
+                <Image   x:Name="backgroundImage" Source="{Binding InfoUrl}" AbsoluteLayout.LayoutFlags="PositionProportional"  HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Aspect="AspectFill"/>
             </Grid>
-            <Grid Grid.Row="2">
-                <hpl:HyperlinkLabel     x:Name="ContestTerms" Text="{x:Static resources:Properties.Resources.ContestTermsLabel}" Clicked="ContestTerms_Clicked" />
-            </Grid>
-            <Grid Grid.Row="3"  BackgroundColor="White"   >
+            <Grid Grid.Row="2"  BackgroundColor="White"   >
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Button HeightRequest="40" Grid.Column="1" x:Name="OKBtn" Margin="10,0,10,0" Opacity="0.5" Text="OK" Clicked="OKBtn_Clicked"   ></Button>
-                <Button HeightRequest="40" Grid.Column="2" x:Name="CancelBtn" Margin="10,0,10,0" Opacity="0.5" Text="Cancel" Clicked="CancelBtn_Clicked" ></Button>
+                <Label Text="{x:Static resources:Properties.Resources.EnterCompetition}" TextColor="#0D6EFD" VerticalTextAlignment="Center" HorizontalTextAlignment="Start" FontSize="Medium"/>
+                <Button  Grid.Column="1" x:Name="OKBtn" Margin="5" Opacity="0.5" Text="{x:Static resources:Properties.Resources.YesText}" Clicked="OKBtn_Clicked"   ></Button>
+                <Button  Grid.Column="2" x:Name="CancelBtn" Margin="5" Opacity="0.5" Text="{x:Static resources:Properties.Resources.NoText}" Clicked="CancelBtn_Clicked" ></Button>
             </Grid>
+            
+                <hpl:HyperlinkLabel     x:Name="ContestTerms" Text="{x:Static resources:Properties.Resources.ContestTermsLabel}" Clicked="ContestTerms_Clicked" Grid.Row="3" FontSize="Micro"/>
+            
 
         </Grid>
-        
+
 
 
     </Frame>
