--- a/DestoPesto/DestoPesto/Views/UserProfilePage.xaml
+++ b/DestoPesto/DestoPesto/Views/UserProfilePage.xaml
@@ -5,7 +5,8 @@
              xmlns:extensions="clr-namespace:DestoPesto.Extensions"
              xmlns:resources="clr-namespace:DestoPesto"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             x:Class="DestoPesto.Views.UserProfilePage">
+             x:Class="DestoPesto.Views.UserProfilePage"
+             BackgroundColor="White">
     <Shell.TitleView >
         <StackLayout HorizontalOptions="FillAndExpand">
             <Grid InputTransparent="True"   VerticalOptions="Center" >
@@ -22,10 +23,10 @@
 
     <ContentPage.Content>
 
-        <StackLayout Grid.Row="1" VerticalOptions="Center">
+        <StackLayout Grid.Row="1" VerticalOptions="Start" Padding="0,50,0,0">
 
-            <Label Text="{x:Static resources:Properties.Resources.UserProfileText}" TextColor="{extensions:AppMode Color=Text}" HorizontalOptions="CenterAndExpand" FontSize="Title"/>
-            <Label  Text="{x:Static resources:Properties.Resources.UserProfileText_2}" TextColor="{extensions:AppMode Color=Text}"  HorizontalOptions="CenterAndExpand" FontSize="Header" />
+            <Label Text="{x:Static resources:Properties.Resources.UserProfileText}" TextColor="#0D6EFD" HorizontalOptions="CenterAndExpand" FontSize="Title"/>
+            <Label  Text="{x:Static resources:Properties.Resources.UserProfileText_2}" TextColor="#0D6EFD"  HorizontalOptions="CenterAndExpand" FontSize="Header" />
 
             <!--<Image Source="{AppThemeBinding Light={extensions:ImageResource DestoPesto.Images.login_header.png}, Dark={extensions:ImageResource DestoPesto.Images.login_header.png}}"  />-->
 
@@ -44,19 +45,19 @@
                         <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0" Margin="5" BackgroundColor="White" >
                             <Image Source="{extensions:ImageResource DestoPesto.Images.user.png}" Aspect="AspectFill" Margin="0"/>
                         </Frame>
-                        <Entry TextColor="#0D6EFD" Text="{Binding Name}" Placeholder="{x:Static resources:Properties.Resources.PersonNamePlaceHolder}"  x:Name="txtPassword"  BackgroundColor="White"  HorizontalOptions="FillAndExpand" >
+                        <Entry TextColor="#0D6EFD" Text="{Binding Name}" Margin="4" Placeholder="{x:Static resources:Properties.Resources.PersonNamePlaceHolder}"  x:Name="txtPassword"  BackgroundColor="White"  HorizontalOptions="FillAndExpand" >
 
                         </Entry>
                     </StackLayout>
                 </Frame>
 
-                <Frame BackgroundColor="White"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
+                <Frame BackgroundColor="White"  Margin="0,15,0,0"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
                     <StackLayout Orientation="Horizontal">
                         <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0" Margin="5" BackgroundColor="White">
                             <Image Source="{extensions:ImageResource DestoPesto.Images.email.png}" Aspect="AspectFill" Margin="0" />
                         </Frame>
 
-                        <Entry TextColor="#0D6EFD" Text="{Binding Email}"  Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" BackgroundColor="White" Keyboard="Email"  >
+                        <Entry TextColor="#0D6EFD" Text="{Binding Email}"  Margin="4" Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" BackgroundColor="White" Keyboard="Email"  >
 
                         </Entry>
                     </StackLayout>
@@ -67,7 +68,7 @@
                         <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0" Margin="5" BackgroundColor="White" >
                             <Image Source="{extensions:ImageResource DestoPesto.Images.phone.png}" Aspect="AspectFill" Margin="0"/>
                         </Frame>
-                        <Entry TextColor="#0D6EFD" Text="{Binding PhoneNumber}"  Placeholder="{x:Static resources:Properties.Resources.MobilePhonePlaceHolder}"  BackgroundColor="White"  HorizontalOptions="FillAndExpand" />
+                        <Entry TextColor="#0D6EFD" Text="{Binding PhoneNumber}" Margin="4"  Placeholder="{x:Static resources:Properties.Resources.MobilePhonePlaceHolder}"  BackgroundColor="White"  HorizontalOptions="FillAndExpand" />
 
 
                     </StackLayout>
@@ -80,12 +81,12 @@
                             <Image Source="{extensions:ImageResource DestoPesto.Images.date-of-birth-icon.png}" Aspect="AspectFill" Margin="0"/>
                         </Frame>
                         <Grid IsVisible="{Binding iOS}" HorizontalOptions="FillAndExpand">
-                            <DatePicker x:Name="iOsBirthDatePicker"  VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand" Date="{x:Static sys:DateTime.Now}">
+                            <DatePicker x:Name="iOsBirthDatePicker"  VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand" Margin="0,0,4,0" Date="{x:Static sys:DateTime.Now}">
                                 <DatePicker.Format>dd-MM-yyyy</DatePicker.Format>
                             </DatePicker>
                         </Grid>
 
-                        <Grid IsVisible="{Binding Android}" HorizontalOptions="FillAndExpand">
+                        <Grid IsVisible="{Binding IsAndroid}" HorizontalOptions="FillAndExpand">
                             <Entry  x:Name="birthDateEntry" Focused="birthDateEntry_Focused" Text="{Binding BirthDateText}"  TextColor="#0D6EFD" Placeholder="Birth date"  BackgroundColor="White"  HorizontalOptions="FillAndExpand" >
                             </Entry>
                             <DatePicker IsVisible="false" IsEnabled="False" x:Name="birthDatePicker"  VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand" Date="{x:Static sys:DateTime.Now}">
