--- a/DestoPesto/DestoPesto/Views/SubmisionsListPageDetail.xaml
+++ b/DestoPesto/DestoPesto/Views/SubmisionsListPageDetail.xaml
@@ -22,7 +22,7 @@
                                 <Frame Margin="5" CornerRadius="5"  BackgroundColor="Coral" HorizontalOptions="Fill"  VerticalOptions="Fill" HasShadow="True" IsClippedToBounds="True" Padding="0">
                                     <Grid Padding="5" BackgroundColor="WhiteSmoke">
 
-                                        <xct:Expander>
+                                        <xct:Expander IsExpanded="{Binding IsExpanded}">
                                             <xct:Expander.Header>
                                                 <Grid >
 
@@ -47,7 +47,7 @@
                                             <xct:Expander.ContentTemplate>
                                                 <DataTemplate>
 
-                                                    <Grid HeightRequest="180"  >
+                                                    <Grid HeightRequest="360"  >
                                                         <Grid.RowDefinitions>
                                                             <RowDefinition Height="4*"/>
                                                             <RowDefinition Height="*"/>
@@ -60,11 +60,28 @@
                                                             <Grid.ColumnDefinitions>
                                                                 <ColumnDefinition Width="Auto"/>
                                                                 <ColumnDefinition Width="*"/>
+                                                                
 
                                                             </Grid.ColumnDefinitions>
+                                                            <Grid.RowDefinitions>
+                                                                <RowDefinition Height="auto"/>
+                                                                <RowDefinition Height="40" />
+                                                            </Grid.RowDefinitions>
+                                                            <Grid HorizontalOptions="FillAndExpand" HeightRequest="70">
                                                             <Label Padding="5" Text="{x:Static resources:Properties.Resources.Fixed}" VerticalOptions="CenterAndExpand" TextColor="{extensions:AppMode Color=TextDefault}"/>
+                                                            </Grid>
                                                             <!--  Button Control  -->
-                                                            <Button Grid.Column="1" Padding="5" BackgroundColor="#2196F3" HeightRequest="40" HorizontalOptions="End" Text="{x:Static resources:Properties.Resources.YesText}" CornerRadius="6" Command="{Binding FixedCommand}">
+
+                                                            <Button Grid.Column="0" Grid.Row="1" Padding="5" BackgroundColor="#2196F3" HeightRequest="40" HorizontalOptions="Start" Text="{x:Static resources:Properties.Resources.NoText}" CornerRadius="6" Command="{Binding CloseCommand}" >
+                                                                <!--<Button.Margin>
+                                                                    <OnPlatform x:TypeArguments="Thickness">
+                                                                        <On Platform="Android" Value="-4,-6,-4,-5" />
+                                                                        <On Platform="iOS" Value="0" />
+                                                                    </OnPlatform>
+                                                                </Button.Margin>-->
+                                                            </Button>
+
+                                                            <Button Grid.Column="1" Grid.Row="1"  Padding="5" BackgroundColor="#2196F3" HeightRequest="40" HorizontalOptions="End" Text="{x:Static resources:Properties.Resources.YesText}" CornerRadius="6" Command="{Binding FixedCommand}">
                                                                 <!--<Button.Margin>
                                                                     <OnPlatform x:TypeArguments="Thickness">
                                                                         <On Platform="Android" Value="-4,-6,-4,-5" />
