--- a/DestoPesto/DestoPesto/Views/SubmisionsListPageDetail.xaml
+++ b/DestoPesto/DestoPesto/Views/SubmisionsListPageDetail.xaml
@@ -60,7 +60,7 @@
                                                             <Grid.ColumnDefinitions>
                                                                 <ColumnDefinition Width="Auto"/>
                                                                 <ColumnDefinition Width="*"/>
-                                                                <ColumnDefinition Width="*"/>
+                                                                
                                                                 
 
                                                             </Grid.ColumnDefinitions>
@@ -69,7 +69,8 @@
                                                             
                                                             <!--  Button Control  -->
 
-                                                            <Button Grid.Column="1" Padding="5" BackgroundColor="#CF1F25" HeightRequest="40" HorizontalOptions="Start" Text="{x:Static resources:Properties.Resources.NoText}" CornerRadius="6" Command="{Binding CloseCommand}" >
+                                                            <StackLayout Grid.Column="1" Spacing="15" Orientation="Horizontal" HorizontalOptions="End">
+                                                            <Button Grid.Column="1" Padding="20,5,20,5" BackgroundColor="#CF1F25" VerticalOptions="Center"  HorizontalOptions="Start" Text="{x:Static resources:Properties.Resources.NoText}" CornerRadius="6" Command="{Binding CloseCommand}" >
                                                                 <!--<Button.Margin>
                                                                     <OnPlatform x:TypeArguments="Thickness">
                                                                         <On Platform="Android" Value="-4,-6,-4,-5" />
@@ -78,7 +79,7 @@
                                                                 </Button.Margin>-->
                                                             </Button>
 
-                                                            <Button Grid.Column="2" Padding="5" BackgroundColor="#5EDD60" HeightRequest="40" HorizontalOptions="End" Text="{x:Static resources:Properties.Resources.YesText}" CornerRadius="6" Command="{Binding FixedCommand}">
+                                                            <Button Grid.Column="2" Padding="20,5,20,5" BackgroundColor="#5EDD60" VerticalOptions="Center"  HorizontalOptions="End" Text="{x:Static resources:Properties.Resources.YesText}" CornerRadius="6" Command="{Binding FixedCommand}">
                                                                 <!--<Button.Margin>
                                                                     <OnPlatform x:TypeArguments="Thickness">
                                                                         <On Platform="Android" Value="-4,-6,-4,-5" />
@@ -86,6 +87,7 @@
                                                                     </OnPlatform>
                                                                 </Button.Margin>-->
                                                             </Button>
+                                                            </StackLayout>
 
                                                             <!--  Text Label  -->
                                                             <!--<Label Margin="10,0,0,0" FontAttributes="Bold" FontSize="Small" HorizontalOptions="Start" HorizontalTextAlignment="Center" InputTransparent="True" Text="go next" TextColor="White" VerticalOptions="Center" VerticalTextAlignment="Center" />-->
