--- a/DestoPesto/DestoPesto/Views/SubmisionDetailsPopupPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SubmisionDetailsPopupPage.xaml
@@ -28,7 +28,7 @@
            HeightRequest="400"
            Padding="0">
         <Grid >
-            <Frame Margin="5" CornerRadius="5"  BackgroundColor="WhiteSmoke" HorizontalOptions="Fill"  VerticalOptions="Fill" HasShadow="True" IsClippedToBounds="True" Padding="0">
+            <Frame  CornerRadius="5"   BackgroundColor="WhiteSmoke" HorizontalOptions="Fill"  VerticalOptions="Fill" HasShadow="True" IsClippedToBounds="True" Padding="5">
                 <Grid HeightRequest="180"  >
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
@@ -49,9 +49,9 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="20*"/>
                             </Grid.ColumnDefinitions>
-                            <Label Grid.Column="1" FontSize="Subtitle"  Text="{Binding Path=Submission.CategoryName}"></Label>
-                            <Label Grid.Column="1" Grid.Row="1"  Text="{Binding Path=Submission.fullAddress}"></Label>
-                            <Label Grid.Column="1" Grid.Row="2"  Text="{Binding Path=Submission.SubmissionsNumberPrompt}"></Label>
+                            <Label Grid.Column="1" FontSize="Subtitle"  Text="{Binding Path=Submission.CategoryName}" TextColor="{extensions:AppMode Color=TextDefault}" ></Label>
+                            <Label Grid.Column="1" Grid.Row="1"  Text="{Binding Path=Submission.fullAddress}" TextColor="{extensions:AppMode Color=TextDefault}"></Label>
+                            <Label Grid.Column="1" Grid.Row="2"  Text="{Binding Path=Submission.SubmissionsNumberPrompt}" TextColor="{extensions:AppMode Color=TextDefault}"></Label>
                         </Grid>
 
                     </Grid>
@@ -63,29 +63,31 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
+                            
 
                         </Grid.ColumnDefinitions>
-                        <Label Padding="5" Text="{x:Static resources:Properties.Resources.Fixed}" VerticalOptions="CenterAndExpand"/>
+                        <Label Padding="5" Text="{x:Static resources:Properties.Resources.Fixed}" TextColor="{extensions:AppMode Color=TextDefault}" VerticalOptions="CenterAndExpand"/>
                         <!--  Button Control  -->
 
-                        <Button x:Name="Cancel" Grid.Column="1"   Padding="5" WidthRequest="100" BackgroundColor="#CF1F25" HeightRequest="40" HorizontalOptions="Start" Text="{x:Static resources:Properties.Resources.NoText}" CornerRadius="6" Clicked="Cancel_Clicked" >
-                            <!--<Button.Margin>
+                        <StackLayout Grid.Column="1" Spacing="15" Orientation="Horizontal" HorizontalOptions="End">
+                            <Button x:Name="Cancel" Grid.Column="1"   Padding="20,5,20,5" VerticalOptions="Center" BackgroundColor="#CF1F25"  HorizontalOptions="Start" Text="{x:Static resources:Properties.Resources.NoText}" CornerRadius="6" Clicked="Cancel_Clicked" >
+                                <!--<Button.Margin>
                                                                     <OnPlatform x:TypeArguments="Thickness">
                                                                         <On Platform="Android" Value="-4,-6,-4,-5" />
                                                                         <On Platform="iOS" Value="0" />
                                                                     </OnPlatform>
                                                                 </Button.Margin>-->
-                        </Button>
+                            </Button>
 
-                        <Button Grid.Column="2"  IsEnabled="{Binding enableFixButton}" Padding="5" WidthRequest="100" BackgroundColor="#5EDD60"  HeightRequest="40" HorizontalOptions="End" Text="{x:Static resources:Properties.Resources.YesText}" CornerRadius="6" Clicked="Fixed_Clicked" >
-                            <!--<Button.Margin>
+                            <Button Grid.Column="2"  IsEnabled="{Binding enableFixButton}" VerticalOptions="Center"  Padding="20,5,20,5" BackgroundColor="#5EDD60"  HorizontalOptions="End" Text="{x:Static resources:Properties.Resources.YesText}" CornerRadius="6" Clicked="Fixed_Clicked" >
+                                <!--<Button.Margin>
                                                                     <OnPlatform x:TypeArguments="Thickness">
                                                                         <On Platform="Android" Value="-4,-6,-4,-5" />
                                                                         <On Platform="iOS" Value="0" />
                                                                     </OnPlatform>
                                                                 </Button.Margin>-->
-                        </Button>
+                            </Button>
+                        </StackLayout>
 
                         <!--  Text Label  -->
                         <!--<Label Margin="10,0,0,0" FontAttributes="Bold" FontSize="Small" HorizontalOptions="Start" HorizontalTextAlignment="Center" InputTransparent="True" Text="go next" TextColor="White" VerticalOptions="Center" VerticalTextAlignment="Center" />-->
